test_programs/compile_failure/noirc_frontend_tests_numeric_generic_used_in_nested_type_fails/src/main.nr

    pub struct Foo<let N: u32> {
        a: Field,
        b: Bar<N>,
    }
    pub struct Bar<let N: u32> {
        inner: N
    }
    